# iris_core

./: AUTHORS  CHANGELOG  CMakeLists.txt  COPYRIGHT  Doxyfile  README  README.md
cmake/modules/: FindDL.cmake  FindQwt.cmake  IrisPackage.cmake
doc/: Doxyfile  Main_Page.txt
doc/style/: cppguide.xml
iris/: CMakeLists.txt  ControllerManager.h  ControllerManagerCallbackInterface.h  DataBuffer.h  EngineCallbackInterface.h  EngineInterface.h  EngineManager.h  IRISV2.h  Iris.h  MemoryManager.h  PNEngine.h  PhyEngine.h  RadioRepresentation.h  ReconfigurationManager.h  SharedLibrary.h  StackEngine.h  System.h  XmlParser.h
irisapi/: CMakeLists.txt  Command.h  CommandPrison.h  ComponentBase.h  ComponentCallbackInterface.h  ComponentEvents.h  ComponentInformation.h  ComponentParameters.h  ComponentPorts.h  Controller.h  ControllerCallbackInterface.h  DataBufferInterfaces.h  Event.h  Exceptions.h  Interval.h  LibraryDefs.h  LinkDescription.h  Logging.h  MessageQueue.h  Metadata.h  ModuleParameters.h  PNComponent.h  ParameterTypeInfo.h  PhyComponent.h  ReconfigurationDescriptions.h  StackComponent.h  StackDataBuffer.h  TemplatePNComponent.h  TemplatePhyComponent.h  TypeInfo.h  TypeVectors.h  Version.h
scripts/: update_copyright.sh
src/: CMakeLists.txt  ControllerManager.cpp  EngineManager.cpp  IRISV2.cpp  Iris.cpp  IrisStateMachine.cpp  IrisStateMachine.h  Launcher.cpp  MemoryManager.cpp  QtWrapper.h  RadioRepresentation.cpp  ReconfigurationManager.cpp  System.cpp  XmlParser.cpp
src/engines/: CMakeLists.txt
src/engines/phyengine/: CMakeLists.txt  PhyComponentManager.cpp  PhyComponentManager.h  PhyDataBuffer.h  PhyEngine.cpp
src/engines/pnengine/: CMakeLists.txt  PNComponentManager.cpp  PNComponentManager.h  PNDataBuffer.h  PNEngine.cpp
src/engines/stackengine/: CMakeLists.txt  StackComponentManager.cpp  StackComponentManager.h  StackEngine.cpp  StackInTranslator.cpp  StackInTranslator.h  StackOutTranslator.cpp  StackOutTranslator.h
src/sharedlibrary/: CMakeLists.txt  SharedLibrary_posix.cpp  SharedLibrary_windows.cpp
src/ticpp/: CMakeLists.txt
src/ticpp/include/: ticpp.h  tinyxml.h
src/ticpp/src/: CMakeLists.txt  ticpp.cpp  tinyxml.cpp  tinyxmlparser.cpp
tests/: CMakeLists.txt  CommandPrison_test.cpp  Component_test.cpp  ControllerManager_test.cpp  Controller_test.cpp  DataBuffer_test.cpp  DataTypes_test.cpp  EngineManager_test.cpp  Interval_test.cpp  Logging_test.cpp  MemoryManager_test.cpp  Metadata_test.cpp  PNEngine_test.cpp  PhyEngine_test.cpp  RadioRepresentation_test.cpp  ReconfigurationManager_test.cpp  SharedLibrary_test.cpp  StackEngine_test.cpp  System_test.cpp  TestComponent.h  TestController.h  TestLibrary.cpp  TestLibrary.h  XmlParser_test.cpp  config_tests.h.in
